--- a/pages/p1/958017.md
+++ b/pages/p1/958017.md
@@ -1,4 +1,4 @@
-### 字节跳动将打包旗下三大业务赴香港上市(图)
+### 传沈阳医生吹哨：疫情真的非常严重(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="字节跳动 抖音 Tiktok" src="https://img3.secretchina.com/pic/2020/7-9/p2728321a827682991-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="沈阳现疫情“吹哨人”：疫情非常严重，不要到处跑（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2021/1-4/p2851051a637898884-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   抖音海外版Tiktok的国际业务前景仍不明朗。（图片来源：Getty Images）
+   沈阳现疫情“吹哨人”：疫情非常严重，不要到处跑（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,56 +29,69 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月8日讯】（看中国记者文龙综合报导）有消息指，
+  【看中国2021年1月4日讯】（看中国记者文俪综合报导）中国大陆
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/字节跳动" target="_blank">
-    字节跳动
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  正在与投资者商谈一轮总额为20亿美元的融资。融资完成后，字节跳动估值将达1800亿美元。另外，
+  疫情愈趋严重之势，东北疫情状况尤令外界担忧，
   <strong>
-   抖音
+   沈阳
   </strong>
-  海外版
+  亦出现疫情“
   <strong>
-   Tiktok
+   吹哨人
   </strong>
-  的国际业务前景仍不明朗。
+  ”。日前，有网传视频显示，
+  <strong>
+   沈阳医生
+  </strong>
+  在微信群警告说，现在不要瞎跑，疫情异常严重，传播速度非常快，传染性非常非常强。此外，其他省市疫情实况也不容小觑，
+  <strong>
+   河北
+  </strong>
+  省4日上午宣布进入战时状态，下午又宣布将4地列为
+  <strong>
+   中风险地区
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合中国大陆媒体11月7日报道，从知情人士处获得的更为确切消息，在此次上市资产里的主要是三大业务：
-  <span href="https://www.secretchina.com/news/gb/tag/抖音" target="_blank">
-   抖音
-  </span>
-  、今日头条、西瓜视频。原因是将这些成熟业务打包有利于市场给出更高的估值。
+  1月2日，网络热传一段微信聊天视频，内容显示，沈阳某急救中心一位医生在一微信群警告说：“现在不要瞎跑，疫情异常严重，传播速度非常快，传染性非常非常强。”
  </p>
  <p>
-  而飞书、
-  <span href="https://zh.wikipedia.org/zh-cn/Tiktok" target="_blank">
-   TiKTok
-  </span>
-  、火山引擎等业务，以及上周刚刚发布独立品牌的大力教育，并不在
-  <span href="https://zh.wikipedia.org/zh-cn/%E5%AD%97%E8%8A%82%E8%B7%B3%E5%8A%A8" target="_blank">
-   字节跳动
-  </span>
-  此次上市计划中。
+  这名医生表示：“现在这一天，我们这一天，白天要出4、5趟，昨天又有核酸阳性的。主要是，这一天天的闲不住，到处溜跶的不好，现在是非常时期不能溜跶。”
  </p>
  <p>
-  此前，字节跳动考虑推动
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%8A%96%E9%9F%B3" target="_blank">
-   抖音
+  他还指，核酸检测有时候一次根本检测不出来，此次发病的尹老太太是第4次核酸检测才检查出来结果。所以前3次核酸检测也没什么意义，注意保持1米的距离就行。
+ </p>
+ <p>
+  “这个
+  <span href="https://www.secretchina.com/news/gb/2021/01/04/957943.html" target="_blank">
+   老尹太太
   </span>
-  业务单独在香港上市。知情人士称，高盛等多家投行曾与字节跳动沟通承销事宜。彼时，字节跳动相关负责人回应媒体称，“在考虑部分业务上市计划，但还没有最后确定”。
+  ，她是一个欧洲的亚型一个分支。我怀疑她已经是一个变异的存在，传染性非常非常强。我前天拉的一患者，就跟她在同一时间段在八院看了一回病，估计面都没朝，认识都不认识，就传染上了。”
  </p>
  <p>
-  字节跳动推动抖音赴港上市，无论是在上市地点还是业务对标度上，都被认为是与其最大竞争对手快手的IPO争夺战——快手计划在2021年第一季度赴港上市，9月以来已经有多次上市进展的消息传出。
  </p>
- <p>
-  过去一年，抖音和快手之间的缠斗，一路从用户规模、产品形态、直播电商延伸至资本市场。
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +106,7 @@
   </div>
  </center>
  <p>
-  字节跳动上一轮融资已经是两年之前。2018年8月，字节跳动以750亿美元的估值正式启动融资，并在两个月内快速完成。
+  据悉，该名医师口中所讲的老尹太太，应该就是此前从韩国返沈的67岁尹某某。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,25 +121,11 @@
   </div>
  </center>
  <p>
-  字节跳动成立8年以来，是迄今为止全球范围内成长性最高的互联网公司之一。根据今年8月下旬TikTok提交的一份文件，TikTok在美国的月活跃用户数已达到1亿，这一数据相比2018年1月上涨了近800%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  根据据官方报导指，沈阳出现超级传染病例。患者尹某某已导致21人感染
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
   </span>
-  (特朗普)政府通过行政命令,下达了针对TikTok的禁令。美国政府认为，中国的字节跳动公司旗下的抖音海外版TikTok引发了国家安全方面的担忧，因为北京当局可能会获得使用该应用的1亿美国人的个人数据。TikTok否认了这些指控。
+  (又称新冠状病毒，COVID-19)，尹某某的孙女、尹某某的共同居住者、邻居等9人被传染。而尹某某此前亦曾前往过秀水诊所、沈阳谱康医院、沈医二院北院区、沈阳市第四医院就诊，有多名医护人员亦被传染，4家医院诊所均已被关闭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,30 +140,7 @@
   </div>
  </center>
  <p>
-  TikTok母公司字节跳动的处境也很尴尬，例如，
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  虽然因为美国政府不断发布的禁令，而逐渐远离美国市场，但它背后还有北京当局的支持。华为副董事长徐直军之前有恃无恐地说过，如果美国继续限制华为，美国可能遭到北京当局反制。在华为首席财务官孟晚舟案中，北京当局更是倾举国之力援助华为。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而在8月初美国的
-  <span href="https://www.secretchina.com/news/gb/tag/Tiktok" target="_blank">
-   Tiktok
-  </span>
-  禁令下达后，中国外交部发言人虽然多次表示反对，并呼吁美方停止这种做法，但北京当局并没有其它力挺抖音的具体措施。
+  自去年12月28日起，沈阳市一级以下医疗机构全面停诊。沈阳已在30日宣布全面进入战时状态。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,11 +159,41 @@
   </ins>
  </center>
  <p>
-  川普还下达了另一道行政命令，限期要求TikTok剥离在美国的业务。不过，
+  因此网络上有大量网友留言埋怨尹某某，称她以一己之力干翻一座城，甚至有网友认为，应该将她这种到处溜达散播病毒的行为判刑。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  目前根据官方4日最新通报，截至4日0时至12时，辽宁新增2例本土确诊，其中大连1例、沈阳1例。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  除了沈阳疫情形势不容乐观外，
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  技术出口新规的出台，让收购Tiktok的谈判陷入僵局。
+  其他省市疫情也愈趋严重之势。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,7 +208,10 @@
   </div>
  </center>
  <p>
-  中国商务部会同科技部在8月28日发布了新的《中国禁止出口限制出口技术目录》，调整了53项技术条目，其中新增了23项限制类条目。
+  <span href="https://www.secretchina.com/news/gb/tag/河北" target="_blank">
+   河北
+  </span>
+  省卫生健康委4日上午通报，河北省1月3日单日新增4例武汉肺炎本土确诊病例，新增13例本土无症状感染者。中共河北当局随即宣布，迅速进入战时状态。同日下午，官方又发通报称：即日起，河北省石家庄市藁城区增村镇小果庄村、石家庄市藁城区增村镇刘家佐村、邢台市南宫市天地名城小区、邢台市南宫市天一合院小区调整为中风险地区。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -217,56 +226,7 @@
   </div>
  </center>
  <p>
-  随后，中国官媒《新华网》在相关报道中引述中国对外经济贸易大学教授崔凡的分析，此次调整可能涉及字节跳动的前沿技术，包括第21条关于“基于数据分析的个性化信息推送服务技术”和第18条关于“人工智能交互界面技术”等控制要点。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  崔范指向明确地说，抖音海外版Tiktok美国业务如果要出售相关技术，要履行申请许可程序；在此之前，抖音要“严肃并慎重考虑是否需要暂停相关交易的实质性谈判”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  鉴于官方历来都对疫情真实状况讳莫如深，因此，外界强烈质疑，中国疫情的实况可能要比官方公布的严重的多。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -279,6 +239,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Dt"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -296,13 +293,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951815.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951815.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951815.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/08/951815.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958017.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958017.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958017.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/04/958017.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/951815.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/958017.md' width='0px' height='0px'/>
