同步于: 1月4日23时2分

--- a/pages/p5/958040.md
+++ b/pages/p5/958040.md
@@ -1,4 +1,4 @@
-### 大股东高位套现33亿 24万股民瑟瑟发抖(图)
+### 人民币再暴涨 出口临熄火 热钱考验房地产(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="股东 股民 套现 海康威视" src="https://img2.secretchina.com/pic/2019/6-1/p2435851a539099473-ss.jpg"/>
+  <img alt="武汉肺炎 人民币 出口 房地产" src="https://img2.secretchina.com/pic/2019/8-6/p2485621a20964989-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   海康威视大股东龚虹嘉通过大宗交易减持7600万股，合计高达33亿元。（图片来源：FRED DUFOUR/AFP/Getty Images）
+   1月4日，人民币对美元即期汇率暴涨。（图片来源：Freer/Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,71 +29,60 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月8日讯】（看中国记者丁晓雨综合报导）中国监控巨头
+  【看中国2021年1月4日讯】（看中国记者李正鑫综合报导）1月4日，
   <strong>
-   海康威视
+   人民币
   </strong>
-  ，10月下旬起股价加速上行。在11月6日大盘震荡走弱时，拉升出上市10年来的新高。6日晚，该公司突然宣布，大
+  对美元即期汇率暴涨。在
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/股东" target="_blank">
-    股东
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  副董事长龚虹嘉减持套现33亿元。这是三个月内，龚虹嘉再次减持，两次合计
+  疫情和人民币升值的影响下，中国外贸
   <strong>
-   套现
+   出口
   </strong>
-  近70亿，上市10年来共套现超200亿。
+  企业利润近无。中国央行释放大量资金和国际热钱的涌入，工业原料和物价快速上涨，也考验
+  <strong>
+   房地产
+  </strong>
+  市场吸纳资金的能力。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《证券时报》报导，11月5日，
-  <span href="https://www.secretchina.com/news/gb/tag/海康威视" target="_blank">
-   海康威视
+  1月4日，在岸
+  <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
+   人民币
   </span>
-  发生了3笔巨额大宗交易，成交额分别为20.14亿元、12.37亿元和0.77亿元，合计高达33.28亿元。
+  兑美元接连涨破6.50、6.49、6.48、6.47、6.46关口，最低报6.4592，截至收盘，报6.4628，较上一交易日上涨770点，创2018年6月来新高。
  </p>
  <p>
-  一天后，卖方海康威视的副董事长、第二大股东龚虹嘉现身。11月6日晚间，公司发布了一条大
-  <span href="https://zh.wikipedia.org/wiki/股东" target="_blank">
-   股东
+  值得注意的是，2020年
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%BA%BA%E6%B0%91%E5%B8%81" target="_blank">
+   人民币
   </span>
-  巨额减持公司股份的消息：龚虹嘉通过大宗交易减持7600万股，占公司总股本的0.8133%，合计高达33亿元。
- </p>
- <p>
-  这是龚虹嘉今年第二次减持
-  <span href="https://zh.wikipedia.org/wiki/海康威视" target="_blank">
-   海康威视
+  汇率的走势呈现先抑后扬。2020年初，受
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E" target="_blank">
+   武汉肺炎
   </span>
-  股票。9月份，龚虹嘉减持了9344.85万股海康威视，套现36.33亿元。三个月内，两次累计套现达到70亿元。
+  疫情影响，人民币汇率一度走低。至5月29日，美元兑人民币汇率中间价报7.1316，跌破2008年3月以来的低点。
  </p>
  <p>
-  自10月下旬股价加速上行以来，10月6日，海康威视在大盘震荡走弱时收涨2.06%，报49.11元/股；盘中最高涨逾3%至49.63元/股。收盘价及盘中最高价均创出了上市10年半以来的历史新高。
+  但是此后，人民币开启一路狂飙模式。2020年5月29日至今，人民币的涨幅已经达到9.34%，反弹幅度超7000点。
  </p>
  <p>
-  高位减持，不是龚虹嘉的第一次操作。龚虹嘉上一波减持是在2018年1月，也是在股价高位时卖出。
+  对于2021年人民币汇率走势，汇丰大中华区首席经济学家屈宏斌认为今年人民币有升值的压力，预计人民币对美元汇率会在6.4-6.6之间浮动。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  自上市以来，经过多次减持，龚虹嘉已经累计在海康威视上
-  <span href="https://www.secretchina.com/news/gb/tag/套现" target="_blank">
-   套现
+  摩根大通
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  216亿元。从初始的245万元投资，如今已套现+持股市值合计已经达到748亿元，龚虹嘉在海康威视的投资狂赚了3万倍。在业界赢得“A股套现王”之称，一度被称为“中国最优秀的天使投资人”。
+  首席经济学家朱海斌认为，预计2021年人民币仍然会维持较强的走势，至少本轮人民币升值期会持续到今年上半年。到2021年底，人民币兑换美元的汇率会升至6.25左右。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +97,7 @@
   </div>
  </center>
  <p>
-  目前，龚虹嘉仍持有海康威视10.86亿股，占总股本的比例为11.62%，仍然为海康威视的第二大股东。同时，其夫人陈春梅持股80%的新疆普康投资有限合伙企业持有海康威视1.83亿股。若按照最新收盘价，两人合计持有海康市值高达623亿元。
+  据《路透社》1月4日报道，“其实就是一轮补涨，因为去年底人民币没有走出升值态势，”一位中资行交易员称，“如果监管不控制升值节奏的话，下一步人民币先看到6.4元。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +112,7 @@
   </div>
  </center>
  <p>
-  11月6日，海康威视再度成交24.95亿元大宗交易。具体来看，瑞银证券上海花园石桥路买入11.4亿元，两个机构席位合计买入7.79亿元。卖方方面，平安证券浙江分公司卖出15.41亿元，三个机构席位合计卖出9.54亿元。
+  该交易员并指出，今日人民币涨势凌厉，“这个速度下去到6.4估计也用不了几天。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +127,7 @@
   </div>
  </center>
  <p>
-  《每日经济新闻》报导称，此次龚虹嘉的密集减持，可能让三季度才新近进入或加仓海康威视的两位流通股大股东高毅资产与中信证券有点尴尬。
+  另一中资行交易员也表示，跨年之后做多人民币的意愿明显上升，估计后续仍有升值空间，“新年有新的指标”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +142,7 @@
   </div>
  </center>
  <p>
-  10月23日，海康威视公布的2020年三季报显示，百亿级私募高毅资产的高毅邻山1号远望基金新进持有2.31亿股，占流通股比例为2.85%，跃升为第四大流通股股东。
+  招商证券总量团队最新年度预测认为，随着全球流动性从收缩期进入扩张期、全球风险偏好改善，投资者开始减少持有作为安全资产的美元，而人民币对应进入升值周期，将升至6.0-6.5之间。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,7 +157,30 @@
   </div>
  </center>
  <p>
-  中信证券增持加仓约992万股，合计持有1.13亿股，名列第八大流通股股东。
+  人民币不断升值，对中国外贸
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%87%BA%E5%8F%A3" target="_blank">
+   出口
+  </span>
+  企业来说，并不是一个好消息。因为对于外贸企业来说，人民币的升值对进口企业有利，而对于出口企业影响则较大。一些企业在收到外方货款进行结汇时，由于人民币汇率上升，实际到手的人民币大大缩水，直接影响企业效益甚至导致企业亏损。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国外贸
+  <span href="https://www.secretchina.com/news/gb/tag/出口" target="_blank">
+   出口
+  </span>
+  半壁江山是由民营企业支撑起来的，相较于国有企业和外资企业，它们抵挡市场风险的能力比较弱。在武汉肺炎疫情的影响下，外贸企业在去年上半年基本没有赚钱，很多企业甚至是亏损的，倒闭的也不少。随着各地复工复产，下半年外贸出口企业都在抓紧生产、出货，然而人民币的升值让出口企业利润消失殆尽。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,11 +199,7 @@
   </ins>
  </center>
  <p>
-  不过机构投资从不做亏本买卖，顶多有些尴尬，最糟心的是海康威视的24万
-  <span href="https://zh.wikipedia.org/wiki/投資者" target="_blank">
-   股民
-  </span>
-  。原本股价拉升，股民应该高兴，但大股东高位减持巨额套现，令股民心中忐忑不安。
+  特别是中国新年前的这段时间，本来就是外贸企业的出货旺季，等过年一放假，产能就全停了。然而，去年12月多地又拉闸限电，企业生产受到影响，外贸企业遭遇三重打击。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,11 +214,7 @@
   </div>
  </center>
  <p>
-  有
-  <span href="https://www.secretchina.com/news/gb/tag/股民" target="_blank">
-   股民
-  </span>
-  称：“手里还拿着海康威视，瑟瑟发抖”，“麻烦了，周一有的搞了。”
+  人民币不断升值，也吸引了国际热钱进入中国，并且，中国央行在2020年释放了十几万亿人民币的资金到金融系统，这些都导致工业原料和物价的上涨。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +229,7 @@
   </div>
  </center>
  <p>
-  有人表示：“公司大股东悄悄的拉升股价，然后突然公告减持股份。三个跌停板也不够啊！”
+  例如，截至2020年12月31日，2020年下半年成品纸的累计涨幅达800-1000元/吨，出厂价从最低的5500-5700元/吨上涨至近7000元/吨。陕西、河北、山西、浙江等地的企业陆续发出涨价函。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,7 +244,7 @@
   </div>
  </center>
  <p>
-  更有股民愤愤不平：“历年总分红274.9亿，他赚700多亿，什么投资天使，投资恶魔吧！”
+  多家纸企均向媒体表示，此次涨价的主要原因是木浆等造纸原料价格上涨。目前浆板原料价格已涨到5900元/吨，往年仅为4000多元/吨，另外上千元的其它原料和加工费，纸企还称不上盈利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -255,11 +259,11 @@
   </div>
  </center>
  <p>
-  网友评论说，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  金融业内人士分析指出，热钱太多，又不让进
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%88%BF%E5%9C%B0%E4%BA%A7" target="_blank">
+   房地产
   </span>
-  的股市就是赌场，“坑人没商量”。海康威视本是标准的低端制造业劳动密集型行业，结果被忽悠成高科技高成长公司大白马，散户误信入坑，“死路一条”。
+  这个资金蓄水池，股市风险又太大，热钱只有进消费品、原材料领域。今年是物价最贵的一年，也是今后十年最便宜的一年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,27 +277,12 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+ <p>
+  另有分析认为，大量的资金无处可去，就得需要有一个能吸纳资金的地方。虽然楼市也很危险，
+  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
+   房地产
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  泡沫史无前例之大。但是地方政府用行政命令在控制着楼市，主动权在政府手里面，因此会稍微放开一点，吸纳多余资金。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -306,6 +295,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41EG"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -323,13 +350,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951880.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951880.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951880.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/08/951880.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958040.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958040.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/958040.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/04/958040.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/951880.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/958040.md' width='0px' height='0px'/>
