--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -114243,4 +114243,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01050251)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01050302)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
