--- a/pages/p3/958053.md
+++ b/pages/p3/958053.md
@@ -1,4 +1,4 @@
-### 女子带5箱现金坐飞机 全被没收还遭逮捕(图)
+### 61岁男子亲述：我就是这样被感染的(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,13 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="女子带5箱现金坐飞机 全被没收还遭逮捕" src="https://img3.secretchina.com/pic/2020/10-1/p2786711a778880883-ss.jpg" style="height:400px; width:600px"/>
+  <img alt="加拿大 疫情 感染" src="https://img3.secretchina.com/pic/2020/5-22/p2694511a554045196-ss.jpg" style="height:410px; width:600px"/>
   <br>
-   英国
-   <strong>
-    一
-   </strong>
-   名女子带着5箱现金坐飞机，由于没有申报，被全部没收。（机场旅客示意图/非本文图片/图片来源：NHAC NGUYEN/AFP via Getty Images）
+   2020年3月23日，加拿大一医护人员用手势示意下一名轮候者进入中心做中共病毒检测。（示意图/非本文图片/图片来源：DAVE CHAN/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,77 +21,53 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月11日讯】
+  【看中国2021年1月5日讯】自
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
-    英国
-   </span>
+   疫情
   </strong>
-  一名女子带着5箱现金坐飞机，由于没有申报，结果在
+  爆发以来，不少人中招，但却不知道是如何被
   <strong>
-   机场
+   感染
   </strong>
-  全被没收，还被指控涉嫌
+  的。很多感染者确诊后都表示：“我已经按照指引戴口罩、勤洗手、保持社交距离……不明白为何感染、在哪里感染。”不过，
   <strong>
-   洗钱
+   加拿大
   </strong>
-  ，目前，她已被逮捕，如果被定罪，将面临最高14年的监禁。
+  一名61岁男子在确诊后亲述被感染的过程。他相信是在理发店感染了
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
+  </span>
+  (又称新冠状病毒，COVID-19)，因为帮他理发的发型师确诊感染病毒，而他不小心“踫到了她踫过的东西”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   英国女子携带5箱
-   <span href="https://www.secretchina.com/news/gb/tag/现金" target="_blank">
-    现金
-   </span>
-   坐飞机被全部没收
-  </strong>
- </p>
- <p>
-  据英国媒体10月9日报道，来自英国利兹的30岁塔拉-汉隆，周六晚上8点左右，准备从伦敦希思罗
-  <span href="https://www.secretchina.com/news/gb/tag/机场" target="_blank">
-   机场
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%96%AB%E6%83%85" target="_blank">
+   加拿大
   </span>
-  坐飞机前往阿联酋迪拜。
+  媒体报导，安省约克区Maple镇男子Duane Booth，11月11日，去烈治文山的一间理发店理发。当时他和理发师两人都戴了口罩，但是4天后的11月15日，Duane出现症状：发冷，但是没有发烧、鼻塞、头疼、全身疼痛。
  </p>
  <p>
-  然而在她登记之前，塔拉直接被边境警察拦下。因为当时她携带了5个箱子，箱子里装满了现金，足足有190万英镑（约合人民币1700万元）。
+  好在当晚，他和妻子就分床睡了。
  </p>
  <p>
-  塔拉随后被逮捕，她将被指控
-  <span href="https://zh.wikipedia.org/wiki/%E6%B4%97%E9%8C%A2" target="_blank">
-   洗钱
-  </span>
-  罪。和她一起被捕的还有一名来自唐卡斯特的28岁女子，当局尚未透露其姓名。
+  接着11月16日，Duane接到了理发师的电话，告知他自己确诊了。没想到，在理发师接待的20名客人里，Duane是唯一的感染者。
  </p>
  <p>
-  如今，塔拉被关押在监狱中，她会于11月5日在艾尔沃思皇家法院出庭。如果被定罪，塔拉将面临最高14年的监禁。
+  他说，“我想，我是踫到了她踫过的东西。”Duane解释说，其实理发师已经非常小心，每一位客人结束后都要全部清理一遍。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  英国移民合规大臣克里斯-菲尔普表示：“这是2020年迄今为止边境最大的一笔个人现金被扣押……防止从英国转移未申报的现金是压制有组织犯罪的重要一步。”
+  16日当天，Duane去做了检测，并开始给这些天里他见过的人一一打电话。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,11 +82,7 @@
   </div>
  </center>
  <p>
-  此前，英国当局没收了商人曼苏尔-侯赛因1000万英镑（约合人民币8700万元）的财产。曼苏尔无法证明自己合法获得这些财产而被怀疑
-  <span href="https://www.secretchina.com/news/gb/tag/洗钱" target="_blank">
-   洗钱
-  </span>
-  。
+  他说：“我和一个朋友一起喝了啤酒，和另一位朋友吃过午餐，还和一位朋友一起踦了30公里自行车。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,9 +97,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   西班牙4华人携带185万欧元闯关被拦下
-  </strong>
+  好在，这些人全部都检测呈阴性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -146,7 +112,37 @@
   </div>
  </center>
  <p>
-  2019年5月，四名华人因携带185万欧元现金没有申报，在西班牙马尼塞斯机场被捕。
+  同时，Duane在开始的4天感觉都良好，但是16日和17日两天症状加剧了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “我出现身体疼痛、发冷、头痛、打喷嚏、咳嗽，但是没有很疲倦，还能工作。”他解释说，在隔离期间他可以回复邮件和打电话。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  17日晚，Duane睡得很糟糕，第二天早上醒来时仍然感觉身体疼痛，不过到了18日的晚上，症状就迅速消退了。18日晚上，Duane感觉自己好了8成，并且喝了一杯红酒。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,7 +161,7 @@
   </ins>
  </center>
  <p>
-  海外媒体报道，当时，城市警卫队正在进行例行检查。X射线扫射出这4名华人行李箱中很可能装有大量现金，于是被要求开箱检查。
+  接下来的日子，Duane完全康复。唯一的问题是，他不小心又把病毒传染给了女儿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +176,7 @@
   </div>
  </center>
  <p>
-  果然，警方在行李箱中发现了185万欧元现金。据悉，这四名华人打算飞往土耳其，而这笔巨额现金由于未经申报，属于非法携带。后来警方将他们带到当地警局，等待他们的，是巨额罚款甚至更严重的后果。
+  他相信这是因为女儿与他接触了同一个酒瓶。又是因为接触，女儿也出现了身体疼痛和咳嗽。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -195,7 +191,7 @@
   </div>
  </center>
  <p>
-  2018年，意大利一对华人夫妇因为在机场被发现携带10万欧元闯关而被调查。警方怀疑现金的来源与偷漏税有关，进而对其名下的公司进行了调查。
+  Duane说，通过这场经历，他认识到保持距离和戴口罩确实是有用的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -210,7 +206,7 @@
   </div>
  </center>
  <p>
-  彻查之下，警方发现该公司有大量假冒鞋，且发现此华人家庭自2013年起，累计逃税金额总共约1000万欧元。后来这对夫妇及其他3名家庭成员均被警方起诉。
+  “除了女儿以外，那几天我周围的人都没有生病，因为我们互相保持了距离。所以，相信戴上口罩和保持距离，你就可以避免感染到病毒。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,27 +220,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p>
+  Duane还谈到，公共卫生系统确实在发挥作用。他在生病期间一直多次接到Mackenzie Health医院呼吸科医生的电话，医生还给了他一个血氧仪用于监测，因为他61岁了。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -257,6 +234,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:韩江雪
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41ET"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -274,13 +285,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/948855.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/948855.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/948855.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/11/948855.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/958053.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/958053.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/958053.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/05/958053.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/948855.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/958053.md' width='0px' height='0px'/>
