--- a/pages/nsc418/n12665675.md
+++ b/pages/nsc418/n12665675.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新1.4】科学家忧疫苗不敌非洲毒株" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
+<div><img alt="【疫情更新1.4】纽约现首例英变种病毒" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
 <div class="caption">
  科学家们担心目前已有的疫苗无法抵抗在非洲发现的中共病毒（武汉肺炎）新变种。（Shutterstock）
 </div></div><hr/>
