--- a/pages/nsc412/n12665675.md
+++ b/pages/nsc412/n12665675.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.4】纽约现首例英变种病毒" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
+<div><img alt="【疫情更新1.4】南加州现6例英病毒变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
 <div class="caption">
- 科学家们担心目前已有的疫苗无法抵抗在非洲发现的中共病毒（武汉肺炎）新变种。（Shutterstock）
+ 南加州已发现6例最早在英国发现的中共病毒变种。纽约也发现首例该病毒变种毒株。（Shutterstock）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
