--- a/pages/p4/958179.md
+++ b/pages/p4/958179.md
@@ -1,4 +1,4 @@
-### 笑看拜登沐猴而冠 川普总统大网将收(图)
+### 中共渗透利诱下 美政界高层腐化(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/11-1/p2808351a21011817-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="川普" src="https://img3.secretchina.com/pic/2020/12-13/p2837010a409446058-ss.jpg" style="height:450px; width:600px"/>
   <br>
-   笑看拜登沐猴而冠 川普总统大网将收（图片来源：ANGELA WEISS MANDEL NGAN/AFP/Getty Images）
+   2020年12月12日，华盛顿DC举行挺川普游行集会（图片来源：看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,41 +29,50 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月11日讯】2020年美国
-  <span href="https://www.secretchina.com/news/gb/tag/大选" target="_blank">
-   大选
-  </span>
-  的精彩程度已经超过了大多数影视剧，既热闹惊险，又伏笔重重暗流涌动。
+  【看中国2021年1月6日讯】
+  <strong>
+   翟东升演讲视频泄露了
+   <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+    中共
+   </span>
+   对美渗透
+  </strong>
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  大选前民主党候选人拜登的儿子爆出硬盘门丑闻，硬盘里大量的证据显示拜登家族出卖美国利益换取个人巨额财产。可是一向是拿着放大镜去找总统候选人把柄的美国媒体集体噤声，对拜登的丑闻不报道，遮遮掩掩。没有一家媒体去想办法采访拜登或者他的儿子亨特，提出像媒体常对
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)问的那样尖锐的问题，逼拜登父子回答。一家都没有。不仅主流媒体如此，推特、脸书、YouTube也是对相关信息删帖、限流，甚至封了川普总统竞选团队的账号。
- </p>
- <p>
-  而选举日过后，这一幕媒体大戏又开始上演了。众所周知，在选举日之夜，就在川普总统票数领先的时候，数个摇摆州突然停止计票，这是美国总统选举历史上第一次暂停数票。据在现场的工作人员说，停止数票的原因是没有选票可数了，计票站等待到凌晨四点左右，各地出现了同样的现象——运来十几万张邮寄选票，百分百投给
-  <span href="https://www.secretchina.com/news/gb/tag/拜登" target="_blank">
-   拜登
-  </span>
-  ，其他候选人一票都没有！而且现场禁止共和党监督员近距离督看，却以超乎常理的极短时间就将这些选票计入系统，出现拜登票数神奇反超的怪事。不要说是选总统这么大的事了，就是选学生会主席，这么明目张胆的作弊谁能看得下去？
- </p>
- <p>
-  几天之内川普总统团队已收集到大量拜登选票作弊证据，并在已提交法院诉讼的情况下，主流媒体并没有去等法律程序走完，就众口一词的宣布拜登当选了总统，川普总统直播的记者会也被所有媒体统一中途掐断，全美50州的支持川普游行活动主流媒体完全不报道。同时推特等社交媒体又在上演封号删帖戏码，自大选日以来，川普总统被推特审查删帖了17次。我有朋友因转发了质疑拜登选票舞弊、支持川普的推文，而账号被封。还有朋友在Facebook参加的挺川团才三分钟就被删。美国媒体已经是某些势力的工具，早就没有什么言论自由、新闻自由、真相正义这回事了。
- </p>
- <p>
-  我读过的一篇文章这样说：一个国家的主流媒体都齐声歌颂一个领袖，是有大问题的。反过来，一个国家的所有主流媒体都齐声反对一个总统，但是在民间却是巨大的支持声，这也是有大问题的。
+  最近传出，中国人民大学国际关系学院副院长翟东升11月28日的演讲视频，泄露了
+  <strong>
+   中共
+  </strong>
+  对美统战和
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/渗透" target="_blank">
+    渗透
+   </span>
+  </strong>
+  的密闻。翟东升声称，“在1992年到2016年之间，中美之间各种危机都可以在两个月之内搞定”，“什么原因？咱们上边有人，我们在美国的权势核心圈有我们的老朋友！”中共对美国的渗透早已经传得沸沸扬扬，但是一个中共学者公开昭告天下，还是令人震惊。
  </p>
  <p>
   <strong>
-   有左派污蔑川普是独裁者，这真是个荒谬的谎言。古往今来，哪里有连发声都找不到地方的独裁者？
+   中共
   </strong>
-  90%的媒体都是反川的，川普的好事不报道，抓到点把柄就反复说、夸大说，还恶意剪辑编造假新闻去中伤。逼得大国总统只能靠发推特来说话，可是就连推特也经常给川普及其团队删帖，你见过这样的独裁者吗？要说独裁，民主党的操控媒体、限制言论自由的行为倒是更有独裁者特质。
+  为了实现“取代
+  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+   美国
+  </span>
+  成为世界霸主”的野心，对美国采取渗透收买“权势核心圈”，以便达到
+ </p>
+ <p>
+  （1）窃取美国高科技技术。
+ </p>
+ <p>
+  （2）输送“社会主义理念”进入美国。
+ </p>
+ <p>
+  （3）腐化美国政界，让美国政府依照中共的意志行事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -78,7 +87,7 @@
   </div>
  </center>
  <p>
-  事实上美国宪法并没有赋予媒体宣布总统选举结果有效性。
+  令人恐惧的是：“这3个工作项目，中共都得到巨大的成果”。其中，“腐化美国政界”对美国的伤害最大，而所利用的工具就是“钱”，翟东升说：“天下没有美元搞不定的事情。如果一沓（钞票）搞不定，我就两沓，这是我的工作方式。”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +102,11 @@
   </div>
  </center>
  <p>
-  2020美国总统选举规则流程如下：
+  翟东升特别指出“在1992年到2016年之间”，表示从1992年，也就是从克林顿（Bill Clinton）赢得总统大选开始，到2016年，
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)（Donald Trump）赢得总统大选为止。在这期间内，中共对美国渗透与收买“权势核心圈”进行很顺利。在这当中，总统克林顿就是始作俑者。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +121,9 @@
   </div>
  </center>
  <p>
-  2020年11月3日:投票日
+  <strong>
+   克林顿出卖美国“导弹关键技术”给中共
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +138,11 @@
   </div>
  </center>
  <p>
-  2020年12月8日:各州解决争议，确定最终结果
+  克林顿开放美国“导弹关键技术”输出给中共的讯息，已经有不少报导。从1995年起数年间，美国“休斯太空通讯公司（Hughes Space and Communications）”与“劳拉太与空通信公司（Loral Space&amp;Communications）”在克林顿政府的许可下，对
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  输出“导弹系统”技术，并且接受了60名中国科技人员到美国训练。当时中国导弹技术严重落后，历经数次发射失败，接受美国技术后突飞猛进。如今，中共的长程导弹可以携带核弹头，射程涵盖全美国，全是克林顿一手造成的。换来的是，“休斯”与“劳拉”对民主党的巨额捐款。怪不得，有人以“卖国贼”称呼克林顿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +157,7 @@
   </div>
  </center>
  <p>
-  2020年12月14日:各州选举人团投票
+  后来，经过数年的调查，“休斯”与“劳拉”两家公司分别被罚巨款，因为违反美国联邦法律，但是克林顿却逍遥法外。不幸的是，对美国以及全世界的伤害已经造成，
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +172,9 @@
   </div>
  </center>
  <p>
-  2020年12月23日:选举人票递交参议院议长和国家档案局局长
+  <strong>
+   中共渗透美国政府高层
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,7 +189,7 @@
   </div>
  </center>
  <p>
-  2021年1月3日:国家档案局局长将选举人票送交国会
+  在美国也有出现了吹哨人，12月20日名作家彼得・施韦泽（Peter Schweizer）在福斯新闻（Fox News）电台，讨论有关拜登（Biden）家族丑闻，与主持人玛丽亚（Maria Bartiromo）的一段对话中。他说：“在华府有很多有权势的人希望，杭特．拜登（Hunter Biden）的事件赶快结束，因为这有可能直接影射到他们的身上。你只要看美国立法机构的最髙层，参议员院多数党领袖麦康奈尔（Mitch McConnell）的妻子，交通部长赵小兰（Elaine Chao）所拥有的船运事业，购船是由中国政府贷款，船只是中国政府制造的，船员是中国政府招集的，公司的业务与所运输的货物大多数来自中国国营企业。因此，假如麦康奈尔做出中共不喜欢的事，他们可以毁掉这个家族事业。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,7 +204,7 @@
   </div>
  </center>
  <p>
-  2021年1月6日:国会清点选举人票，参议院议长（彭斯）主持并宣布结果
+  施韦泽继续说，众议院议长佩洛西（Nancy Pelosi）的丈夫在中国完成一连串的交易以及参议员范士丹（Dianne Feinstein）的丈夫在中国经商25年都得利于中共特别照顾。最后他提出一个问题：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +219,7 @@
   </div>
  </center>
  <p>
-  2021年1月20日:新总统就任典礼
+  “为了摧毁美国政府的领导阶层，中国政府让一些美国高级政治人物的家人，享有特殊商业优惠。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +234,7 @@
   </div>
  </center>
  <p>
-  更何况川普总统已经就拜登选举舞弊启动了法律程序，最起码一个月才能知道法院裁决结果。新总统宝座到底花落谁家，现在说结论为时尚早。媒体一厢情愿的宣布拜登获胜，只是他们打的一场心理战，完全不用理会。拜登充其量就是沐猴而冠，很快就会现出原形。好戏还在后面，败灯只是一时得意的小丑罢了。
+  “问题是，我们必须要有反制的行动，或我们就让它过去了？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +249,7 @@
   </div>
  </center>
  <p>
-  全球都在嘲笑美国大选作弊，如果真让一个选票作假的卖国贼当总统，美国人民肯定忍不了这个耻辱，会揭竿而起的。美国人捍卫正义的最后一步不是最高法院，而是手里的枪。
+  玛丽亚回答：“在这里我向我的观众们承诺，我绝对会追究到底，不容中国共产党接管美国。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +264,7 @@
   </div>
  </center>
  <p>
-  一位前海军中将说得好：如果拜登当选，本次大选将会是美国最后一次民主选举。
+  玛丽亚大义凛然的回应令人感动，但接下来发生的事情，却令人毛骨悚然。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +279,9 @@
   </div>
  </center>
  <p>
-  川普是正义的最后一道屏障，如果失守，美国就将迎来暴政；而保住川普，就是保住美国的自由和强大，也是保住世界的和平状态。
+  <strong>
+   黑手操控美国媒体
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +296,7 @@
   </div>
  </center>
  <p>
-  川普总统是真正的爱国者，他的所作所为一心为了美国和美国人民。川普的儿子说，“父亲会战斗到死。”川普总统的确是我所知的最勇敢的人之一。我的一位朋友打了一个特别形象的比方：“没有一个国家元首比川普更勤奋和更拼了，好比一个泼妇拼命地在维护自已儿女的利益”。川普当然有他的缺点，但是这都不能掩盖他的成就。
+  数日后，同样在福斯的新闻节目，主播玛丽亚在节目中刚提到“拜登与亨特被调查的丑闻”，整个节目就被掐断，转播表彰纳什维尔爆炸案几个警察的内容……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -292,7 +315,7 @@
   </ins>
  </center>
  <p>
-  有人说川普筹集到的竞选资金比拜登少很多。其实，川普如果想要弄到大量竞选资金太容易了，但是他不肯接受大企业捐款，他说如果我接受了这些钱，以后就会不得不接一些电话。他不想为了连任出卖美国人民的利益。
+  显然地，有人决定玛丽亚不可以继续追查“拜登丑闻案件”，而这个人的权力大到可以马上断播。回想自从美国总统大选竞选期间以来，美国的“大媒体包括社交媒体”不约而同的，不报导“对拜登不利的消息”与“对川普有利的消息”，实在可怕。我们可以确定的是，有一只可怕的“黑手”在背后操作，决定美国人民“可以知道什么讯息”，与“不可以知道什么讯息”。这跟共产中国有什么不同？只是共产党是明目张胆的控制新闻报导，而在美国是邪恶的“黑手”在背后操控。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -307,7 +330,7 @@
   </div>
  </center>
  <p>
-  而拜登则相反，从大企业那里募捐了三倍于川普的钱，他们不做竞选集会，却用来搞选举舞弊，用来和川普打官司。这4年来，民主党人不择手段的以各种方式阻扰川普总统正常执政，对其抹黑攻击贬损，如今又在通过大选舞弊实施政变。
+  这只黑手的真面目是什么？还暂时看不清楚，但是我们知道“这只黑手正在摧毁，已经建立了200多年的美国自由民主政治体系。”我们必须唤醒民众，铲除黑手，护卫自由民主。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -322,7 +345,9 @@
   </div>
  </center>
  <p>
-  民主党通过吸毒合法、教育洗脑、媒体控制、放纵犯罪，去伤害美国的孩子，事实上民主党是美国的敌党，是爱国的反面，此次如若让民主党上台，美国将万劫不复。
+  <strong>
+   支持川普捍卫自由民主
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -337,7 +362,11 @@
   </div>
  </center>
  <p>
-  我宁愿相信到现在还在挺拜登和民主党的人，都是被蒙在鼓里，对事情了解的不够多，或者思考的不够透。否则，那就成了道德沦丧的问题了。如果在充分了解信息的情况下还是支持民主党，那这人非蠢即坏，是为了点蝇头小利，就一点血性也没有了，半点儿尊严也不要了，灵魂都卖给魔鬼，道德都踩在脚下。如果连明晃晃的作弊也视而不见的话，真是连做人的底线也没了。
+  虽然我们还看不清楚“黑手”的真面目，但我们可以看到“黑手”要伤害的人就是川普。回到翟东升演讲视频，他说2016年川普上台后，华尔街试图在中美
+  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
+   贸易战
+  </span>
+  过程中帮中共的忙，但是“力有不逮”。川普不被华尔街控制，更不会听中共的话，因为他不会被收买，也不惧威胁，是中共极欲去除的麻烦人物。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -352,7 +381,7 @@
   </div>
  </center>
  <p>
-  你支持拜登，就是在告诉你的孩子作弊可以当上总统，卖国可以求荣；在告诉你的孩子美国被世人耻笑不重要；在告诉你的孩子媒体想捂住你的嘴巴就由着他，你忍着好啦；在告诉你的孩子爸爸妈妈并不想为你未来生活在一个民主自由赞同普世价值的国家而努力；在告诉你的孩子厚黑学高于信仰，道德不该有底线。
+  这次大选在疫情的扰乱下、在媒体受制于黑手控制下、在前所未有的选举舞弊下，川普落败了。虽然川普团队极力揭选举舞弊，以求翻转选举结果。但是要确定一件弊案需要很长的时间，有那么多的弊案要在两个月内厘清，是不可能的事。因此川普团体选择在1月6日国会确定选举人票时，将所有选举的违法违规的情况诉之于参、众两院，请求两院主持公道。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -367,7 +396,7 @@
   </div>
  </center>
  <p>
-  好在正义一定会战胜邪恶，川普一定会赢，川普总统的王牌是支持他的七八千万真实选民，是正义和上帝的眷顾。拜登的王牌则是主流媒体替他掩人耳目，可惜他的选民有的在坟地里睡觉，有的在软件里隐藏，大多在印刷机里沉默不语。
+  虽然要在参、众两院翻转选举结果并不容易，我们必须继续支持川普团队，理由是在“黑手”的遮盖下，有相当多的民众看不到真相，例如有超过70%的共和党人，相信这次的总统大选有舞弊，但是只有约10%的民主党人相信。川普团队若能在国会提出有力的大选舞弊证据，“黑手”就不容易封锁，有利于全民对“大选舞弊”的认定，也有利于民众对“黑手伸入媒体”的警觉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -382,7 +411,7 @@
   </div>
  </center>
  <p>
-  仅仅赢还不够，川普总统还必须大赢，仅仅连任成功还不够，还必须借此机会把深层政府清洗一下。在拜登自行宣布获胜之后，胸有成竹的川普总统还去打高尔夫，回来还和路边拍照的新人合影交谈，十分轻松愉快。川普总统胜券在握，证据已十分充足，即将收网，一切尽在掌握，宵小魍魉蹦跶不了多久了。等待拜登的不是白宫，而是监狱。
+  再者，川普刚当选年度美国“最受尊重的男士”，加上川普在共和党内有70%以上的支持率，远远超过其他政治人物，川普的领导力由此可见。因此为了“铲除黑手”，为了“铲除政界的腐败”，为了“捍卫自由民主、振兴美国”我们必须继续支持与拥护川普。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -397,22 +426,7 @@
   </div>
  </center>
  <p>
-  2020年是妖魔鬼怪齐现形的一年，这是上天给个机会让美国民众看清楚谁是魔鬼，这样才知道如何捉鬼。一场轰轰烈烈的美国大革命正在不见血的展开。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  好戏，还在后面。
+  1月6日川普号召150万人到华盛顿DC支持川普团队，可以参加的人尽可能去参加，不能参加的人可以参加地区的活动。最重要的，要把真相传出去，让那些被“黑手”朦骗的人看出真相。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -427,6 +441,33 @@
   </div>
  </center>
  (文章仅代表作者个人立场和观点)
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  来源:
+  <span href="/news/gb/tag/民报  ">
+   民报
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41GV"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -448,42 +489,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952147.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952147.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/952147.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/11/952147.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958179.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958179.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/958179.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/06/958179.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/952147.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/958179.md' width='0px' height='0px'/>
