--- a/pages/nf4514/n12670405.md
+++ b/pages/nf4514/n12670405.md
@@ -44,6 +44,21 @@
  以下是有关中共病毒疫情的实时更新：
 </h4>
 <h3>
+ 美至少五州发现英国病毒变种
+</h3>
+<p>
+ 美国国立卫生研究所（NIH）所长弗朗西斯·科林斯（Francis Collins）在接受《华盛顿邮报》采访时说，在美国至少有五个州报导发现了传染性更强的英国病毒变种。
+</p>
+<p>
+ 柯林斯补充说：“我们现在已经在美国在至少五个州中看到了相同的英国病毒，如果该病毒增长速度不是很快，我会感到惊讶。”
+</p>
+<p>
+ 上周，路透社报导佛罗里达成为美国第三个确认为此类病例的州，科罗拉多州和加利福尼亚州则确认了另外两个病例。
+</p>
+<p>
+ 科学家们说，新开发的疫苗应该对两种变体同样有效。
+</p>
+<h3>
  美染疫人数突破2,100万 住院病例破纪录
 </h3>
 <p>
