--- a/pages/nsc412/n12671553.md
+++ b/pages/nsc412/n12671553.md
@@ -1,11 +1,11 @@
-### 【更新】国会继续进行联席会议
+### 【更新】亚利桑那州挑战未通过
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【更新】亚利桑那州挑战未通过" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8YB2U9-600x400.jpg"/>
+<div><img alt="【更新】121名众议员投下亚州反对票" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8YB2U9-600x400.jpg"/>
 <div class="caption">
  周三（1月6日），美国国会召开联席会议期间，国会内发生暴力冲突，认证过程中断。议员们计划晚间恢复会议。图为国会大厦外面的防爆警察。 (Photo by KEVIN DIETSCH / POOL / AFP)
 </div></div><hr/>
@@ -53,10 +53,28 @@
  以下是实时更新内容（美东时间）：
 </p>
 <p>
+ 22：00
+</p>
+<p>
+ 众议员马特·盖兹（Matt Gaetz）在众院大厅发言说：“今天违反国会大厦的一些人不是川普的支持者，他们是伪装成川普的支持者，实际上（他们）是暴力恐怖组织Antifa的成员。”
+</p>
+<p>
+ 22：12
+</p>
+<p>
+ 参院挑战亚利桑那州以93对6票未通过，投下反对票的6名参议员分别是：特德·克鲁兹（Ted Cruz）、约翰·肯尼迪（John Kennedy）、辛迪·海德·史密斯（Cindy Hyde-Smith）、罗杰·马歇尔（Roger Marshall）、比尔·哈格蒂（Bill Hagerty）和汤米·图伯维尔（Tommy Tuberville）。
+</p>
+<p>
+ 参院共和党领袖麦康奈尔说，众议院大概会在23：30-24左右完成对亚利桑那州选举人票的辩论和投票。
+</p>
+<p>
  21：50
 </p>
 <p>
- 众院准备在晚上22点-22点半之间对亚利桑那州的选举人票进行全院投票。参院22点结束亚利桑那州的辩论，开始投票。
+ 众院准备在晚上22点-22点半之间对亚利桑那州的选举人票进行全院投票。
+</p>
+<p>
+ 参院22点结束亚利桑那州的辩论，开始投票。
 </p>
 <p>
  截至21：30，华盛顿DC警察局已逮捕了约30例违反宵禁的人士。宵禁从18点开始。
