--- a/pages/nsc418/n12670405.md
+++ b/pages/nsc418/n12670405.md
@@ -262,7 +262,7 @@
  这也是每天的感染人数首次超过10,000。
 </p>
 <p>
- 之前的每日最高记录是12月31日报告的7,627例新感染。
+ 之前的每日最高纪录是12月31日报告的7,627例新感染。
 </p>
 <p>
  自全球疫情爆发以来，葡萄牙总共有446,606人被诊断出感染了中共病毒。
@@ -359,10 +359,10 @@
  美周二确诊病例突破2100万  死亡人数创纪录
 </h3>
 <p>
- 美国周二报告了3,770多例美国人死于中共病毒，创下了大流行病以来的每日最高死亡人数记录。
+ 美国周二报告了3,770多例美国人死于中共病毒，创下了大流行病以来的每日最高死亡人数纪录。
 </p>
 <p>
- 根据COVID追踪项目，美国周二的确诊病例总人数突破了2100万人。同时，住院人数也创下最新记录，全国有131,100名Covid-19患者住院治疗。
+ 根据COVID追踪项目，美国周二的确诊病例总人数突破了2100万人。同时，住院人数也创下最新纪录，全国有131,100名Covid-19患者住院治疗。
 </p>
 <p>
  随着确诊感染的人数增加，美国一些州的州长正在采取新的措施，以更快地分发疫苗，其中包括动员国民警卫队成员和培训更多的志愿者来注射疫苗。
@@ -600,7 +600,7 @@
 <p>
 </p>
 <p>
- 责任编辑：叶紫微
+ 责任编辑：叶紫微#
 </p>
 <div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 519.812px; width: 273px; height: 19px;">
 </div>
