同步于: 1月7日19时2分

--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -22,6 +22,38 @@
  票胜出，拜登和川普（特朗普）的得票为306:232。
 </p>
 <p>
+ <span class="s2">
+  川普总统随后发声明说，
+ </span>
+ <span class="s1">
+  尽管他完全不同意选举结果，但承诺将在
+ </span>
+ <span class="s2">
+  1
+ </span>
+ <span class="s1">
+  月
+ </span>
+ <span class="s2">
+  20
+ </span>
+ <span class="s1">
+  日进行和平过渡，但他说会继续奋战，“
+ </span>
+ <span class="s1">
+  对‘
+ </span>
+ <span class="s1">
+  美国再次伟大’
+ </span>
+ <span class="s1">
+  而言，这仅仅是我们斗争的开始！
+ </span>
+ <span class="s2">
+  ”
+ </span>
+</p>
+<p>
  参议院和众议院否决了共和党人对乔治亚州和宾夕法尼亚州的挑战，而共和党人对亚利桑那州、内华达州和密歇根州的选举人票被驳回。
 </p>
 <p>
@@ -45,6 +77,61 @@
 </div>
 <p>
  以下是实时更新内容（美东时间）：
+</p>
+<p>
+ 04：06
+</p>
+<p class="p1">
+ <span class="s1">
+  白宫副幕僚长丹
+ </span>
+ <span class="s2">
+  ·
+ </span>
+ <span class="s1">
+  斯卡维诺（
+ </span>
+ <span class="s3">
+  Dan Scavino
+ </span>
+ <span class="s1">
+  ）在推特上发布了川普总统关于选举证的声明，声明说：
+ </span>
+</p>
+<p class="p1">
+ <span class="s2">
+  “
+ </span>
+ <span class="s1">
+  尽管我完全不同意选举结果，且事实将为我作证，但是
+ </span>
+ <span class="s2">
+  1
+ </span>
+ <span class="s1">
+  月
+ </span>
+ <span class="s2">
+  20
+ </span>
+ <span class="s1">
+  日的过渡将是有序的。
+ </span>
+ <span class="s1">
+  我一直说将继续战斗，确保只计算合法的选票。
+ </span>
+ <span class="s1">
+  这代表着（美国）总统历史上最伟大的第一任期的结束，但对‘
+ </span>
+ <span class="s1">
+  美国再次伟大’
+ </span>
+ <span class="s1">
+  而言，这仅仅是我们斗争的开始！
+ </span>
+ <span class="s2">
+  ”
+ </span>
 </p>
 <p>
  03：33
