--- a/pages/nf4514/n12671553.md
+++ b/pages/nf4514/n12671553.md
@@ -1,4 +1,4 @@
-### 【更新】国会认证拜登胜出 川普承诺有序过渡
+### 【更新】美国国会认证乔·拜登胜出
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -95,7 +95,7 @@
   Dan Scavino
  </span>
  <span class="s1">
-  ）在推特上发布了川普总统关于选举认证的声明，声明说：
+  ）在推特上发布了川普总统关于选举证的声明，声明说：
  </span>
 </p>
 <p class="p1">
